<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/LinearLayout"
        android:orientation="vertical">

        <LinearLayout style="@style/LinearLayout">

            <TextView
                android:id="@+id/branch_text_view"
                style="@style/BasicTextView.Branch"
                android:layout_gravity="center_vertical"
                tools:text="@string/economy_branch" />

            <TextView
                android:id="@+id/status_text_view"
                style="@style/BasicTextView.Status"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/status_vertical_padding"
                android:paddingLeft="@dimen/status_horizontal_padding"
                android:paddingRight="@dimen/status_horizontal_padding"
                android:paddingTop="@dimen/status_vertical_padding"
                tools:text="@string/status" />

        </LinearLayout>

        <include layout="@layout/divider" />

        <LinearLayout style="@style/LinearLayout">

            <TextView
                style="@style/BasicTextView.LeftTextView"
                android:text="@string/created_text" />

            <TextView
                android:id="@+id/created_text_view"
                style="@style/BasicTextView"
                android:gravity="end"
                tools:text="@string/created_date" />

        </LinearLayout>

        <include layout="@layout/divider" />

        <LinearLayout style="@style/LinearLayout">

            <TextView
                style="@style/BasicTextView.LeftTextView"
                android:text="@string/registered_text" />

            <TextView
                android:id="@+id/registered_text_view"
                style="@style/BasicTextView"
                android:gravity="end"
                tools:text="@string/registered_date" />

        </LinearLayout>

        <include layout="@layout/divider" />

        <LinearLayout style="@style/LinearLayout">

            <TextView
                style="@style/BasicTextView.LeftTextView"
                android:text="@string/solve_until_text" />

            <TextView
                android:id="@+id/solve_until_text_view"
                style="@style/BasicTextView"
                android:gravity="end"
                tools:text="@string/solve_date" />

        </LinearLayout>

        <include layout="@layout/divider" />

        <LinearLayout style="@style/LinearLayout">

            <TextView
                style="@style/BasicTextView.LeftTextView"
                android:text="@string/responsible_text" />

            <TextView
                android:id="@+id/responsible_text_view"
                style="@style/BasicTextView"
                android:gravity="end"
                tools:text="@string/responsible_name" />

        </LinearLayout>

        <include layout="@layout/divider" />

        <TextView
            android:id="@+id/description_text_view"
            style="@style/BasicTextView"
            tools:text="@string/description" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_images"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recycler_view_height"
            android:layout_marginTop="@dimen/recycler_view_margin" />

    </LinearLayout>

</ScrollView>
